--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html {
 #home {
     background-image: url("./images/bg_header.jpg");
     height: 100vh;
-    width: 100vw;
 
     background-position: center;
     background-size: cover;
@@ -33,10 +32,31 @@ html {
 #about{
     background-image: url(./images/bg_nuage.jpg);
     height: 100vh;
-    width: 100vw;
+
+    background-position: center;
+    background-size: cover;
+}
+
+.borderAbout{
+    border: 1px, solid, white;
+    width: 200px;
+    height:200px;
+    display:flex;
+
 }
 
 .h1{
     font-size: 50px;
 }
+
+#history {
+    background-image: url("./images/bg_appareil_photo.jpg");
+    height: 100vh;
+
+    background-position: center;
+    background-size: cover;
+}
+
+
+
 
