--- a/style.css
+++ b/style.css
@@ -16,47 +16,50 @@ html {
     height: auto;
 }
 
-.logo{
+.logo {
     margin-left: 1px;
     margin-top: 7px;
 }
 
-.petit-titre{
+.petit-titre {
     font-size: 50px;
 }
 
-.gros-titre{
+.gros-titre {
     font-size: 80px;
 }
 
-#about{
+#about {
     background-image: url(./images/bg_nuage.jpg);
-    height: 100vh;
-
+    height: 70vh;
     background-position: center;
     background-size: cover;
 }
 
-.borderAbout{
-    border: 1px, solid, white;
-    width: 200px;
-    height:200px;
-    display:flex;
-
-}
-
-.h1{
+.h1 {
     font-size: 50px;
 }
 
 #history {
     background-image: url("./images/bg_appareil_photo.jpg");
-    height: 100vh;
-
+    height: 70vh;
     background-position: center;
     background-size: cover;
 }
 
+.cadres {
+    border: solid white 1px;
+    width: 200px;
+    height: 200px;
+}
 
+#photos {
+    
+}
 
-
+#mail {
+    background-image: url("./images/bg_newsletter.jpg");
+    height: 55vh;
+    background-position: center;
+    background-size: cover;
+}
